kubernetes/nextcloud/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
  labels:
    app-ingress: ""
    pod-security.kubernetes.io/enforce: baseline #restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: baseline #restricted
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: baseline #restricted
    pod-security.kubernetes.io/audit-version: latest
    app.kubernetes.io/instance: nextcloud
    kubernetes.io/metadata.name: nextcloud
    ca-bundle: "true"
