kubernetes/nextcloud/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud
    app.kubernetes.io/instance: nextcloud
  annotations:
    checkov.io/skip1: CKV_K8S_40=Needs to run as User 33
    checkov.io/skip2: CKV_K8S_31=App Doesn't Support
    checkov.io/skip3: CKV_K8S_22=App Doesn't Support
    checkov.io/skip4: CKV_K8S_43=Not Supported
spec:
  replicas: 2
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
        db: nextcloud-pg
      annotations:
        enable.version-checker.io/nextcloud: "true"
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: nextcloud
              db: nextcloud-pg
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: nextcloud
              db: nextcloud-pg
      serviceAccountName: nextcloud-sa
      volumes:
        - name: nextcloud-cert
          secret:
            secretName: nextcloud-cert
        - name: nextcloud-config
          persistentVolumeClaim:
            claimName: nextcloud-config
        - name: nextcloud
          persistentVolumeClaim:
            claimName: nextcloud
      securityContext:
        fsGroup: 33
        runAsGroup: 33
        runAsUser: 33
        runAsNonRoot: true
        fsGroupChangePolicy: OnRootMismatch
        seLinuxOptions:
          type: "spc_t"
      containers:
        - name: nextcloud
          image: nextcloud:28.0.3-apache
          securityContext:
            runAsGroup: 33
            runAsUser: 33
            runAsNonRoot: true
            #readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            # seccompProfile:
            #   type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8443
              protocol: TCP
          resources:
            limits:
              cpu: 2000m
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 512Mi
          volumeMounts:
            - name: nextcloud-config
              mountPath: /var/www/html
              subPath: nextcloud
            - name: nextcloud-config
              mountPath: /etc/apache2
              subPath: apache2
              readOnly: true
            - name: nextcloud-cert
              mountPath: /ssl
              readOnly: true
            - name: nextcloud
              mountPath: /var/www/html/data
          livenessProbe:
            httpGet:
              path: /status.php
              port: 8443
              scheme: HTTPS
              httpHeaders:
                - name: Host
                  value: "nextcloud.kube.home"
            initialDelaySeconds: 15
            timeoutSeconds: 10
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 15
          readinessProbe:
            httpGet:
              path: /status.php
              port: 8443
              scheme: HTTPS
              httpHeaders:
                - name: Host
                  value: "nextcloud.kube.home"
            initialDelaySeconds: 15
            timeoutSeconds: 10
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      automountServiceAccountToken: false
      hostname: nextcloud
      schedulerName: default-scheduler
