kubernetes/nextcloud/base/statefulset.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud
    app.kubernetes.io/instance: nextcloud
spec:
  replicas: 1
  serviceName: nextcloud
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
      annotations:
        enable.version-checker.io/nextcloud: "true"
        seccomp.security.alpha.kubernetes.io/defaultProfileName: runtime/default
    spec:
      serviceAccountName: nextcloud-sa
      volumes:
        - name: nextcloud-cert
          secret:
            secretName: nextcloud-cert
        - name: nextcloud-config
          persistentVolumeClaim:
            claimName: nextcloud-config-pvc
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: nextcloud-data
      securityContext:
        fsGroup: 33
        runAsGroup: 33
        runAsNonRoot: true
        runAsUser: 33
      containers:
        - name: nextcloud
          image: nextcloud:24.0.1
          securityContext:
            runAsGroup: 33
            runAsUser: 33
            runAsNonRoot: true
            #readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            # seccompProfile:
            #   type: RuntimeDefault
            capabilities:
              drop:
                - all
          ports:
            - containerPort: 8443
              protocol: TCP
          resources:
            limits:
              cpu: 750m
              memory: 750M
            requests:
              cpu: 350m
              memory: 350M
          volumeMounts:
            - name: nextcloud-config
              mountPath: /var/www/html
              subPath: nextcloud
            - name: nextcloud-config
              mountPath: /etc/apache2
              subPath: apache2
              readOnly: true
            - name: nextcloud-cert
              mountPath: /ssl
              readOnly: true
            - name: nextcloud-data
              mountPath: /var/www/html/data
          livenessProbe:
            httpGet:
              path: /status.php
              port: 8443
              scheme: HTTPS
              httpHeaders:
                - name: Host
                  value: "nextcloud.kube.home"
            initialDelaySeconds: 15
            timeoutSeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /status.php
              port: 8443
              scheme: HTTPS
              httpHeaders:
                - name: Host
                  value: "nextcloud.kube.home"
            initialDelaySeconds: 15
            timeoutSeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      automountServiceAccountToken: false
      hostname: nextcloud
      schedulerName: default-scheduler
