kubernetes/nextcloud/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: nextcloud
  name: nextcloud
  labels:
    app.kubernetes.io/instance: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8443
      name: https
  type: ClusterIP
  clusterIP: None
